// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Notifications/Global Default 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "black",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Global Default With Action 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "black",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "Lorem Ipsum!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        Object {
          "_$litType$": 1,
          "strings": Array [
            "<a class=\\"inline text-white\\" href=",
            ">",
            "</a>",
          ],
          "values": Array [
            "https://app.zeplin.io/project/62902a463701ffb0e532df2b/screen/6303d1e19f494b0fe0a52218",
            "Link Action",
          ],
        },
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Global Error 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "danger",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Global Information 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "info",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "Info!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Global Success 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "success",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> check_circle_outline </span> ",
          ],
          "values": Array [],
        },
        "Success!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Global Warning 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "warning",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> warning_amber </span> ",
          ],
          "values": Array [],
        },
        "Warning!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        null,
      ],
    },
  ],
}
`;

exports[`Storyshots Components/Notifications/Global With Action 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
      <div
        class=\\"alert alert-custom bg-",
        " alert-dismissible d-flex align-items-center text-white rounded-0 global-notification\\"
        role=\\"alert\\"
      >
        <div class=\\"container d-flex position-relative\\">
        ",
        "
        <div>
          <strong class=\\"p-2\\">",
        "</strong>
          <span> ",
        "</span>
          <span class=\\"ms-2 text-white\\">
            ",
        "
          </span>
        </div>
        <button
          type=\\"button\\"
          class=\\"btn-close btn-close-white p-1\\" 
          data-bs-dismiss=\\"alert\\"
          aria-label=\\"Close\\"
        ></button>
      </div>
      </div>
    </div>
  ",
      ],
      "values": Array [
        "danger",
        Object {
          "_$litType$": 1,
          "strings": Array [
            " <span class=\\"material-icons\\"> error_outline </span> ",
          ],
          "values": Array [],
        },
        "Error!",
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit",
        Object {
          "_$litType$": 1,
          "strings": Array [
            "<a class=\\"inline text-white\\" href=",
            ">",
            "</a>",
          ],
          "values": Array [
            "https://app.zeplin.io/project/62902a463701ffb0e532df2b/screen/6303d1e19f494b0fe0a52218",
            "Link Action",
          ],
        },
      ],
    },
  ],
}
`;
